[gd_scene load_steps=15 format=3 uid="uid://chmhvh5tv2m0y"]

[ext_resource type="Script" path="res://05_2d_adventure_rpg_game/interactable/dungeon/scripts/locked_door.gd" id="1_5tmht"]
[ext_resource type="Texture2D" uid="uid://s4ywae5ssoly" path="res://assert/05/interactable/dungeon/dungeon_props.png" id="1_ag7kl"]
[ext_resource type="Resource" uid="uid://cgk6i06ueshov" path="res://05_2d_adventure_rpg_game/items/key_dungeon.tres" id="2_1cxw7"]
[ext_resource type="PackedScene" uid="uid://bw4id3op4y5av" path="res://05_2d_adventure_rpg_game/generalnodes/persistantdatahandler/persistant_data_handler.tscn" id="2_xptox"]
[ext_resource type="AudioStream" uid="uid://cja4jxhta0kll" path="res://assert/05/interactable/dungeon/locked_door.wav" id="3_1kl1g"]
[ext_resource type="AudioStream" uid="uid://cbw4uw41x6xmm" path="res://assert/05/interactable/dungeon/unlock_door.wav" id="4_fuee3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jdg4i"]
size = Vector2(64, 60)

[sub_resource type="Animation" id="Animation_xd0vs"]
resource_name = "closed"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StaticBody2D/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_pvojm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StaticBody2D/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_kyx67"]
resource_name = "opened"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StaticBody2D/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_60ehk"]
resource_name = "close_door"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StaticBody2D/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_a81ho"]
resource_name = "open_door"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StaticBody2D/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_thqfk"]
_data = {
"RESET": SubResource("Animation_pvojm"),
"close_door": SubResource("Animation_60ehk"),
"closed": SubResource("Animation_xd0vs"),
"open_door": SubResource("Animation_a81ho"),
"opened": SubResource("Animation_kyx67")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3ktox"]
size = Vector2(36, 20)

[node name="LockedDoor" type="Node2D"]
process_mode = 3
script = ExtResource("1_5tmht")
key_item = ExtResource("2_1cxw7")
locked_audio = ExtResource("3_1kl1g")
open_audio = ExtResource("4_fuee3")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(32, -40)
texture = ExtResource("1_ag7kl")
hframes = 7

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(32, -30)
shape = SubResource("RectangleShape2D_jdg4i")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_thqfk")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="PersistantDataHandler" parent="." instance=ExtResource("2_xptox")]

[node name="InteractArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea2D"]
position = Vector2(32, -10)
shape = SubResource("RectangleShape2D_3ktox")
debug_color = Color(0.724312, 0.79504, 0.423743, 0.42)
